--- a/templates/base.html
+++ b/templates/base.html
@@ -305,6 +305,7 @@
         <a href="{% url 'contact' %}">Contact</a>
         <a href="{% url 'profile' %}">Profile</a>
         <a href="{% url 'logout' %}">Logout</a>
+        <a href="{% url 'game' %}">Game</a>
     </div>
     {% endif %}
 
