--- a/templates/game.html
+++ b/templates/game.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Music Mix Game</title>
+    <title>
+        {% if language == "english" %}
+            Music Mix Game
+        {% elif language == "hindi" %}
+            संगीत मिश्रण खेल
+        {% elif language == "mandarin" %}
+            音乐混音游戏
+        {% endif %}
+    </title>
 </head>
 <body>
-    <h1>Music Mix Game</h1>
+    <h1>
+        {% if language == "english" %}
+            Music Mix Game
+        {% elif language == "hindi" %}
+            संगीत मिश्रण खेल
+        {% elif language == "mandarin" %}
+            音乐混音游戏
+        {% endif %}
+    </h1>
     <audio controls>
         <source src="data:audio/wav;base64,{{ mixed_audio }}" type="audio/wav">
-        Your browser does not support the audio element.
+        {% if language == "english" %}
+            Your browser does not support the audio element.
+        {% elif language == "hindi" %}
+            आपका ब्राउज़र ऑडियो को सपोर्ट नहीं करता है।
+        {% elif language == "mandarin" %}
+            您的浏览器不支持音频播放。
+        {% endif %}
     </audio>
-    <p>Guess the two mixed songs!</p>
+    <p>
+        {% if language == "english" %}
+            Guess the two mixed songs!
+        {% elif language == "hindi" %}
+            मिश्रित गीतों को पहचानें!
+        {% elif language == "mandarin" %}
+            猜猜这两首混音歌曲！
+        {% endif %}
+    </p>
 </body>
 </html>
